--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# .gitignore
+
+## gitignore custom
+.cebcar
+
+## created @gitignore.io
+
 # Created by https://www.toptal.com/developers/gitignore/api/macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos
 
